# rs-sync

./: .clang-format  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  Cargo.toml  README.md  conanfile.txt  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
aux/: sol.py  sol2.py
ext/spline/: CMakeLists.txt
notebooks/: histograms.ipynb
pkgs/opencv/: conandata.yml  conanfile.py
pkgs/opencv/patches/: 1000-ffmpeg.patch
python/: plot_any.py  plot_composition.py  plot_composition2.py  plot_composition_for_slides.py  plot_cost.py  plot_cost_for_slides.py  plot_normals.py  plot_sync.py
rust/telemetry-parser-cpp/: Cargo.toml
rust/telemetry-parser-cpp/inc/: telemetry-parser.h
rust/telemetry-parser-cpp/src/: lib.rs
src/: CMakeLists.txt  arma.cpp  arma2.cpp  autodiff.cpp  backtrack.cpp  benchmark_optflow_json.cpp  calibration.cpp  calibration.hpp  ceres.cpp  ceres_test.cpp  ceres_test2.cpp  core_testcode.cpp  cv.cpp  export_dataset.cpp  gd_and_gsl.cpp  gsl.hpp  guess_orient_json.cpp  histogram.cpp  inline_utils.hpp  line_search.cpp  main.cpp  minispline.hpp  ndspline.cpp  ndspline.hpp  ninepoint_ransac.cpp  normal_fit.cpp  only_plot.cpp  plot.py  plot2.py  plot_tmp.py  polynomial.cpp  problem_dump.cpp  quat.cpp  quat.hpp  rssync_json.cpp  segtree.cpp  segtree.hpp  signal.cpp  simple_calculus.hpp  simple_gd.cpp  (+13 more)
src/common/: CMakeLists.txt  io.cpp  io.hpp  loss.cpp  loss.hpp  optdata.hpp
src/core/: CMakeLists.txt  core_private.cpp  core_private.hpp
src/core/public/: export.h  rssync.h
src/core_support/: CMakeLists.txt  backtrack.hpp  inline_utils.hpp  minispline.cpp  panic.cpp  panic.hpp  quat.cpp  quat.hpp  signal.cpp
src/lib/: CMakeLists.txt
src/lib/bl/: async_frame_loader.cpp  async_frame_loader.hpp  calibration_provider.cpp  calibration_provider.hpp  component.hpp  context.cpp  context.hpp  correlator.cpp  correlator.hpp  dense_optical_flow.cpp  dense_optical_flow.hpp  fine_gyro_correlator.cpp  fine_gyro_correlator.hpp  fine_sync.cpp  fine_sync.hpp  frame_cache.cpp  frame_loader.cpp  frame_loader.hpp  gyro_loader.cpp  gyro_loader.hpp  keypoint_detector.cpp  keypoint_detector.hpp  match_storage.hpp  message_types.hpp  normal_fitter.cpp  normal_fitter.hpp  optical_flow.cpp  optical_flow.hpp  pair_storage.cpp  pair_storage.hpp  pose_estimator.cpp  pose_estimator.hpp  rough_gyro_correlator.cpp  rough_gyro_correlator.hpp  stupid_optical_flow.cpp  stupid_optical_flow.hpp  utils.cpp  utils.hpp  visualizer.cpp  visualizer.hpp
src/lib/ds/: blocking_queue.hpp  lru_cache.hpp  prefix_sums.hpp  range_interpolated.hpp  range_query_cache.hpp  segment_tree.hpp  sync_context.cpp  sync_context.hpp
src/lib/io/: bb_csv.cpp  bb_csv.hpp  stopwatch.hpp
src/lib/math/: __quaternion_plugin.h  default_group.hpp  gyro_integrator.hpp  polynomial.hpp  prefix_sums.hpp  quaternion.hpp  range_interpolated.hpp  rotation.h  segment_tree.hpp  simple_math.hpp
src/lib/vision/: calibration.cpp  calibration.hpp  camera_model.cpp  camera_model.hpp  ninepoint.cpp  ninepoint.hpp  tracking.cpp  tracking.hpp  utils.cpp  utils.hpp  video_reader.hpp
src/obsolete/: ceres.cpp  gsl.cpp  main.cpp  minispline_demo.cpp
src/support/: CMakeLists.txt  cv.cpp  cv.hpp  gsl.hpp  inline_utils.hpp  ndspline.cpp  quat.hpp  signal.hpp
src/test/: CMakeLists.txt  test_cost.cpp  test_cost_align.cpp
src/test/ds/: blocking_queue.cpp  lru_cache.cpp  range_interpolated.cpp  sync_context.cpp
src/test/math/: quaternion.cpp  range_interpolated.cpp
src/test/self/: self.cpp
